# AMNLT

./: .gitmodules  README.md  generate_datasets.sh  pyproject.toml
configs/smt_dan/Einsiedeln/: Einsiedeln_orig_dedup.json
configs/smt_dan/GregoSynth/: GregoSynth_orig_dedup.json
configs/smt_dan/Salzinnes/: Salzinnes_orig_dedup.json
configs/smt_dan/Solesmes/: Solesmes_orig_dedup.json
deduplication/: README.md  deduplication.py  duplicate_finder.py  filter_by_indices.py  requirements.txt  similarity_matrix.py
scripts/: base_holistic_crnn_ctc.sh  img2seq_dan.sh  img2seq_smt.sh  unfolding_crnn.sh  unfolding_fcn.sh
